<resources>
    <string name="app_name" translatable="false">MyShows</string>

    <!-- Login strings -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
    <string name="new_account">or %s new account</string>
    <string name="register">register</string>

    <!-- Navigation strings -->
    <string name="my_series">My series</string>
    <string name="calendar">Calendar</string>
    <string name="friends">Friends</string>
    <string name="favorites">Favorites</string>
    <string name="ratings">Ratings</string>
    <string name="recommendation">Recommendation</string>
    <string name="awards">Awards</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- My series strings -->
    <plurals name="remain">
        <item quantity="one">%d series lefts</item>
        <item quantity="other">%d series left</item>
    </plurals>

    <!-- Show screen strings -->
    <!-- Headers -->
    <string name="overview">Overview</string>
    <string name="rating">Show rating (%.2f)</string>
    <string name="seasons">Seasons</string>
    <!-- Statuses -->
    <string name="cancelled">Cancelled</string>
    <string name="new_show">New</string>
    <string name="ongoing">Ongoing</string>
    <string name="on_break">On break</string>
    <string name="final_season">Final season</string>
    <string name="in_development">In development</string>
    <string name="tbd">TBD</string>
    <string name="pilot">Pilot</string>
    <string name="unknown_status">Unknown</string>
    <!-- Other -->
    <string name="duration">%d min / series</string>
    <string name="my_rating">My rating</string>
    <string name="season_number">%d season</string>
    <string name="unknown_date">date is N/A</string>

    <!-- Episode screen strings -->
    <string name="information">Information</string>
    <string name="no_one_watched">No one watched</string>
    <plurals name="watched">
        <item quantity="one">%d watched</item>
        <item quantity="other">%d watched</item>
    </plurals>
    <string name="episode_empty_rating">No one rating</string>
    <string name="episode_rating">Episode rating (%.2f)</string>
    <string name="view_of_people">View of people</string>
    <string name="empty_comments">There are no comments yet</string>
    <plurals name="read_comments">
        <item quantity="one">Read %d comment</item>
        <item quantity="other">Read %d comments</item>
    </plurals>

    <!-- Comments screen string -->
    <string name="hidden_comment">Show this comment</string>
    <string name="up_vote">Up Vote</string>
    <string name="down_vote">Down Vote</string>
    <string name="reply">Reply</string>
    <string name="comment_hint">Your comment…</string>
    <string name="add_comment">Add a comment</string>
    <string name="post_comment">Post</string>
    <string name="cancel_comment">Cancel</string>
    <string name="update_comments_error">Could not refresh comments</string>
    <string name="vote_comment_error">Could not vote for comment</string>
    <string name="post_comment_error">Could not post the new comment</string>

    <!-- Feed screen strings -->
    <string name="m_watch_one_series">Watched %1$s series of %2$s</string>
    <string name="f_watch_one_series">Watched %1$s series of %2$s</string>
    <plurals name="m_watch_series">
        <item quantity="one">Watched %1$d series of %2$s</item>
        <item quantity="other">Watched %1$d series of %2$s</item>
    </plurals>
    <plurals name="f_watch_series">
        <item quantity="one">Watched %1$d series of %2$s</item>
        <item quantity="other">Watched %1$d series of %2$s</item>
    </plurals>
    <string name="m_started_show">Started watching the show %s</string>
    <string name="f_started_show">Started watching the show %s</string>
    <string name="watch_later_show">Wants to watch show %s</string>
    <string name="m_gave_rating">Gave rating %2$d to show %1$s</string>
    <string name="f_gave_rating">Gave rating %2$d to show %1$s</string>
    <string name="m_stopped_show">Stopped watching the show %s</string>
    <string name="f_stopped_show">Stopped watching the show %s</string>
    <string name="m_got_achievement">Got achievement %s</string>
    <string name="f_got_achievement">Got achievement %s</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!-- Ratings screen -->
    <string name="watching">%s watching</string>
    <string name="show_rating">Rating \u2014 %.2f</string>

    <!-- Profile screen -->
    <string name="profile">Profile</string>
    <string name="place">#%d among friends</string>
    <plurals name="episodes_caption">
        <item quantity="one">episode</item>
        <item quantity="other">episodes</item>
    </plurals>
    <plurals name="days_caption">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hours_caption">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <string name="profile_friends">Friends</string>
    <string name="profile_my_series">My series</string>

    <!-- Preference -->
    <string name="compact_mode">Compact mode</string>
    <string name="compact_mode_description">Display show in compact mode (without images)</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary" translatable="false">0 bytes</string>
    <string name="clear_cache_dialog_title">Clear cache?</string>
    <string name="clear_cache_dialog_content">The application will clear show data from you device, but you can always download it again.</string>
    <string name="clear_cache_dialog_reject">Cancel</string>
    <string name="clear_cache_dialog_accept">Clear</string>

    <string name="notification">Notification</string>
    <string name="check_new_series">Notify about new series</string>
    <string name="time">Time</string>
    <string name="ringtone">Ringtone</string>
    <string name="none_ringtone">None</string>
    <string name="vibration">Vibration</string>

    <string name="other">Other</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_dialog_title">Sign out?</string>
    <string name="sign_out_dialog_content">Signing out will delete all data related to this account from this device. Continue?</string>
    <string name="sign_out_dialog_reject">Cancel</string>
    <string name="sign_out_dialog_accept">Sign out</string>

</resources>
