<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="compact_mode"
        android:summary="@string/compact_mode_description"
        android:title="@string/compact_mode" />

    <PreferenceCategory android:title="@string/cache">

        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/cache_entries"
            android:entryValues="@array/cache_values"
            android:key="cache_size"
            android:title="@string/cache_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="check_new_series"
            android:summary="@string/check_new_series_summary"
            android:title="@string/check_new_series" />

        <RingtonePreference
            android:key="ringtone"
            android:title="@string/ringtone" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibration"
            android:title="@string/vibration" />

    </PreferenceCategory>

</PreferenceScreen>