<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_series"
            android:icon="@drawable/nav_my_series"
            android:title="@string/my_series" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/nav_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/nav_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/nav_rating"
            android:title="@string/ratings" />
    </group>

    <group android:id="@+id/secondary">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings" />
    </group>
</menu>
