<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_padding"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/comment_avatar_size"
            android:layout_height="@dimen/comment_avatar_size"
            android:gravity="center"
            tools:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            tools:text="Зефирь" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_half_padding"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/list_feed_gray_text"
            android:textSize="16sp"
            tools:text="4 days ago" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/neutral_comment"
            android:textSize="16sp"
            tools:text="0" />

    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginTop="1dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur feugiat lorem felis, eget semper risus. " />

    <ImageView
        android:id="@+id/comment_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_half_padding"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_padding"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            style="@style/MyShows.CommentControlButton"
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/reply"
            android:text="@string/reply" />

        <TextView
            style="@style/MyShows.CommentControlButton"
            android:id="@+id/vote_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/downvote"
            android:text="@string/down_vote" />

        <TextView
            style="@style/MyShows.CommentControlButton"
            android:id="@+id/vote_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/upvote"
            android:text="@string/up_vote" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:background="@color/separate_line" />

</LinearLayout>
